# struct-reuse

./: Cargo.toml  readme.md
examples/: demo.rs
src/: lib.rs
