[package]
name = "reusable"
version = "0.1.0"
edition = "2021"
description = "Composable struct fields - reuse struct fields in other structs"
repository = "https://github.com/andrewlowndes/struct-reuse"
license = "MIT OR Apache-2.0"
keywords = ["inheritance", "reuse", "dry", "macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
macro_state = "0.2.0"
quote = "1.0.23"
syn = { version="1.0.107", features=["full"] }
